Fix size scaling for canvas
I added some css to fix a problem where the canvas was being stretched.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 .flex-container {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 }
 
 .flex-row {
